<resources>
    <string name="app_name">Olcademy</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="course_WCmsg">Hello students!
            I am excited to have so many students in this course. I\'ve put together a lot of interesting course materials and activities, and I hope everyone enjoys their experience in this class. We will spend just a few days getting familiar with the structure and expectations of this online course.
I look forward to working with everyone throughout the course and thank you for enrolling in the course!</string>

    <string-array name="spinner_lang">
        <item>-- Select Language --</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Tamil</item>
        <item>Bengali</item>
        <item>Chinese</item>
    </string-array>

    <string-array name="spinner_level">
        <item>-- Select Level --</item>
        <item>Easy</item>
        <item>Moderate</item>
        <item>Expert</item>
        <item>All</item>
    </string-array>

    <string-array name="spinner_cat">
        <item>-- Select Category --</item>
        <item>Technical</item>
        <item>Design</item>
        <item>Marketing</item>
        <item>Music</item>
        <item>Fitness</item>
    </string-array>

    <string-array name="spinner_currency">
        <item>-- Select Currency --</item>
        <item>INR</item>
        <item>Dollar</item>
        <item>YEN</item>
        <item>EURO</item>
    </string-array>

</resources>
