<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq"
            android:key="key_faq" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="me.riddhi.gada.olcademy"
                android:targetClass="me.riddhi.gada.olcademy.WV_Settings" />
        </Preference>

        <Preference
            android:title="@string/privacy_policy"
            android:key="key_pp" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="me.riddhi.gada.olcademy"
                android:targetClass="me.riddhi.gada.olcademy.WV_Settings" />
        </Preference>

        <Preference
            android:title="@string/title_terms"
            android:key="key_tnc" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="me.riddhi.gada.olcademy"
                android:targetClass="me.riddhi.gada.olcademy.WV_Settings" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>